--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,6 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -33,6 +32,15 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+.themed-invert {
+  color: #213547;
+  background-color: #ffffff;
+}
+
+.themed-light {
+  background-color: #313131;
 }
 
 button {
@@ -45,9 +53,10 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  opacity:0.9;
 }
 button:hover {
-  border-color: #646cff;
+  opacity:1;
 }
 button:focus,
 button:focus-visible {
@@ -59,10 +68,19 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
+  .themed-invert {
+    color: rgba(255, 255, 255, 0.87);
+    background-color: #213547;
+  }
   a:hover {
     color: #747bff;
   }
   button {
     background-color: #f9f9f9;
+  }
+
+  .themed-light {
+    background-color: #f2f2f2;
   }
 }
