--- a/src/styles/ResultsStyles.css
+++ b/src/styles/ResultsStyles.css
@@ -14,11 +14,26 @@
   align-items: center;
   
   transition: bottom 0.2s 1s;
-  opacity:0.98;
+
+  overflow:hidden
+}
+
+.results-background {
+  display:block;
+  position:absolute;
+  top:0;
+  left:0;
+
+  border-radius: 1rem;
+  width:100%;
+  height:100%;
+  opacity: 0.94;
+  z-index: -1;
 }
 
 .results-text {
   font-weight: 500;
+  z-index:1;
 }
 
 .results-word {
