--- a/src/styles/ResultsStyles.css
+++ b/src/styles/ResultsStyles.css
@@ -54,15 +54,15 @@
 }
 
 .results-parent-shown {
-  bottom: 22%;
+  bottom: 15%;
 }
 
 .bar-parent {
   display:flex;
   align-items: center;
-  gap: 0.5rem;
   width:100%;
   margin-left: 1rem;
+  margin-bottom: 0.3rem;
 }
 
 .bar-score {
