--- a/src/styles/KeyboardStyles.css
+++ b/src/styles/KeyboardStyles.css
@@ -2,7 +2,7 @@
   position:absolute;
   transform: translate(-50%, 0);
   left: 50%;
-  bottom: 1rem;
+  bottom: 0;
   width: 90%;
   padding-left: 5%;
   padding-right: 5%;
