--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ body {
   margin: 0;
   display: flex;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 500px;
 }
 
 h1 {
@@ -88,6 +88,12 @@ button:focus-visible {
 @media (max-width: 350px){
   :root {
     font-size: 0.9rem;
+  }
+}
+
+@media (max-height: 800px){
+  :root {
+    font-size: 0.8rem;
   }
 }
 
