minimum width and scaling

--- a/src/styles/KeyboardStyles.css
+++ b/src/styles/KeyboardStyles.css
@@ -1,8 +1,8 @@
 .keyboard-parent {
   position:absolute;
-  transform: translate(-50%, 0);
+  transform: translate(-50%, -40%);
   left: 50%;
-  bottom: 0;
+  bottom: -3rem;
   width: 90%;
   padding-left: 5%;
   padding-right: 5%;
