--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,16 @@
 #root {
+  position:relative;
   width: 100%;
   height: 100%;
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0rem;
   text-align: center;
 }
 
 .title {
-  margin-bottom: 3rem;
+  margin-top: clamp(2rem, calc(-5vw + 4rem), 5rem);
+  margin-bottom: clamp(1rem, calc(-3vw + 3rem), 2rem);
 }
 
 
