--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+  margin:0;
+  padding:0;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -24,9 +29,11 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
   min-width: 320px;
-  min-height: 500px;
+  min-height: 40.5rem;
+  position:absolute;
+  height: 95vh;
+  width: 100vw;
 }
 
 h1 {
