--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   position:relative;
   width: 100%;
   height: 100%;
+  transform: translateY(-50px);
   max-width: 1280px;
   margin: 0 auto;
   padding: 0rem;
@@ -9,8 +10,8 @@
 }
 
 .title {
-  margin-top: clamp(2rem, calc(-5vw + 4rem), 5rem);
-  margin-bottom: clamp(1rem, calc(-3vw + 3rem), 2rem);
+  margin-top: 6rem;
+  margin-bottom: 1rem
 }
 
 
